	PR fortran/18833 	PR fortran/20850 	* primary.c (match_varspec): If equiv_flag, don't look at sym's 	attributes, call gfc_match_array_ref up to twice and don't do any 	substring or component processing. 	* resolve.c (resolve_equivalence): Transform REF_ARRAY into 	REF_SUBSTRING or nothing if needed.  Check that substrings 	don't have zero length.

* gfortran.dg/equiv_1.f90: New test.
	* gfortran.dg/equiv_2.f90: New test.
	* gfortran.fortran-torture/execute/equiv_2.f90: New test.
	* gfortran.fortran-torture/execute/equiv_3.f90: New test.
	* gfortran.fortran-torture/execute/equiv_4.f90: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@102801 138bc75d-0d04-0410-961f-82ee72b054a4